<resources>
    <string name="app_name">osuCatDroid</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mapped_by">Mapped by</string>
    <string name="submitted_on">submitted on</string>
    <string name="circle_size">Circle Size:</string>
    <string name="hp_drain">HP Drain:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="approach_rate">Approach rate:</string>
    <string name="star_difficulty">Star Difficulty:</string>
    <string name="success_rate">Success rate:</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="remove">Remove</string>
    <string name="enter_your_username_on_osu">Enter your username on osu!</string>
    <string name="or_another_player_s_name">(or another player\'s name)</string>
    <string name="confirm">CONFIRM</string>
    <string name="search">Search:</string>
    <string name="status">Status:</string>
    <string name="ranked">Ranked</string>
    <string name="qualified">Qualified</string>
    <string name="loved">Loved</string>
    <string name="unranked">Unranked</string>
    <string name="you_are_currently_not_logged">You are currently not logged.</string>
    <string name="log_in_or_make_an_account_in_accounts_tab_to_be_able_to_manage_collections_and_beatmaps">Log in (or make an account) in \'Accounts\' tab to be able to manage collections and beatmaps.</string>
    <string name="performance">Performance:</string>
    <string name="rank">Rank:</string>
    <string name="play_time">Play Time:</string>
    <string name="playcount">Playcount:</string>
    <string name="country">Country:</string>
    <string name="ranked_score">Ranked Score:</string>
    <string name="total_score">Total Score:</string>
    <string name="hit_accuracy">Hit Accuracy:</string>
    <string name="current_level">Current Level:</string>
    <string name="total_hits">Total Hits:</string>
    <string name="hits_per_play">Hits per Play:</string>
    <string name="join_date">Join Date:</string>
    <string name="log_in_or_make_an_account_in_accounts_tab">Log in (or make an account) in \'Accounts\' tab.</string>
    <string name="password">Password:</string>
    <string name="log_in">LOG IN</string>
    <string name="github_com_piro13">github.com/Piro13</string>
    <string name="username">Username:</string>
    <string name="your_api_key">Your API key:</string>
    <string name="get_your_api_key_here">Get your API key here</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="collections">Collections</string>
    <string name="logout">Logout</string>
    <string name="account_deleted">Account deleted</string>
    <string name="logged_as">Logged as</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_api">Enter API key</string>
    <string name="There_is_already_account_with_that_name">There is already account with that name</string>
    <string name="wrong_api_key">Wrong API key</string>
    <string name="ranked_on">Ranked on</string>
    <string name="qualified_on">Qualified on</string>
    <string name="loved_on">Loved on</string>
    <string name="not_yet_played">Not yet played</string>
    <string name="source">Source</string>
    <string name="tags">Tags</string>
    <string name="beatmap_added">Beatmap Added</string>
    <string name="beatmap_removed_from_this_account">Beatmap Removed from this account</string>
    <string name="please_enter_your_query">Please enter your query</string>
    <string name="take_picture_for_avatar">Take picture for avatar</string>
    <string name="redownload_avatar">Redownload avatar</string>
    <string name="update_profile_info">Update profile info</string>
    <string name="log_as">Log as</string>
    <string name="beatmap_add">Beatmap add</string>
    <string name="profile_onfiguration">Profile Configuration</string>
    <string name="new_account">New Account</string>
    <string name="search_results">Search Results</string>
    <string name="beatmap_info">Beatmap info</string>
    <string name="search_beatmaps">Search Beatmaps</string>
    <string name="searching">Searching...</string>
</resources>