<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBaseBackground"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

  <TextView
      android:id="@+id/usernameregTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/username"
      android:textSize="20sp"
      android:layout_marginTop="50dp"
      android:layout_marginStart="12dp"/>

  <EditText
      android:id="@+id/usernameregEditText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/usernameregTextView"
      android:layout_toEndOf="@+id/usernameregTextView"
      android:layout_marginStart="12dp"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="12dp" />

  <TextView
      android:id="@+id/passwordregTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/password"
      android:textSize="20sp"
      android:layout_alignTop="@+id/usernameregTextView"
      android:layout_marginTop="60dp"
      android:layout_marginStart="12dp"/>

  <EditText
      android:id="@+id/passwordregEditText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/usernameregTextView"
      android:layout_toEndOf="@+id/passwordregTextView"
      android:layout_marginTop="50dp"
      android:layout_marginStart="12dp"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="12dp"
      android:inputType="textPassword"/>

  <TextView
      android:id="@+id/apiregTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/your_api_key"
      android:textSize="20sp"
      android:layout_alignTop="@+id/passwordregTextView"
      android:layout_marginTop="60dp"
      android:layout_marginStart="12dp"/>

  <EditText
      android:id="@+id/apiregEditText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/apiregTextView"
      android:layout_marginTop="50dp"
      android:layout_marginStart="12dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentStart="true"
      android:layout_marginEnd="12dp" />

  <Button
      android:id="@+id/buttonGetAPI"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_marginStart="30dp"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="30dp"
      android:layout_below="@+id/apiregEditText"
      android:layout_marginTop="30dp"
      android:text="@string/get_your_api_key_here"/>

  <Button
      android:id="@+id/buttonRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_marginStart="30dp"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="30dp"
      android:layout_below="@+id/buttonGetAPI"
      android:layout_marginTop="30dp"
      android:text="@string/register"/>

</RelativeLayout>