<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen">

    <TextView
        android:id="@+id/profile_config_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/enter_your_username_on_osu"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_config_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/or_another_player_s_name"
        android:textSize="15sp"
        android:layout_below="@+id/profile_config_text"/>

    <EditText
        android:id="@+id/profile_config_edit"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_config_text"/>

    <Button
        android:id="@+id/profile_config_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_config_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/confirm" />

</RelativeLayout>